[gd_scene load_steps=48 format=3 uid="uid://esw7npo7355k"]

[ext_resource type="Script" path="res://Escenas/Enemigos/catalan.gd" id="1_alp6a"]
[ext_resource type="Texture2D" uid="uid://c56kf4x2itq4g" path="res://Assets/Characters/ground_monk_FREE_v1.3-SpriteSheet_288x128.png" id="2_f2ay3"]
[ext_resource type="AudioStream" uid="uid://dhdwcllgm5wn2" path="res://Assets/sounds/evil-laugh-49831.mp3" id="3_lil3s"]
[ext_resource type="AudioStream" uid="uid://ddtf0h03oyu5f" path="res://Assets/sounds/hurtBoss.mp3" id="4_cxdm5"]
[ext_resource type="AudioStream" uid="uid://caf7ps47y3gl2" path="res://Assets/sounds/kick.mp3" id="5_lrqft"]
[ext_resource type="AudioStream" uid="uid://uvcvh8c1356i" path="res://Assets/sounds/roca.mp3" id="6_0le3h"]
[ext_resource type="AudioStream" uid="uid://cnooh6ydjcam7" path="res://Assets/sounds/roca3.mp3" id="7_swvsr"]
[ext_resource type="AudioStream" uid="uid://b8sf21iyijwdd" path="res://Assets/sounds/wind-1-44149.mp3" id="8_xoj61"]

[sub_resource type="Animation" id="Animation_ibblx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_3w1tt"]
resource_name = "attack1"
length = 0.65
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.09, 0.18, 0.28, 0.37, 0.46, 0.55, 1.34),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [99, 100, 101, 102, 103, 104, 105, 106]
}

[sub_resource type="Animation" id="Animation_60em7"]
resource_name = "attack2"
length = 2.0
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.11, 0.18, 0.26, 0.34, 0.43, 0.5, 0.57, 0.65, 0.74, 0.83, 0.92, 1.02, 1.13, 1.23, 1.34, 1.44, 1.55, 1.65, 1.74, 1.83, 1.91),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [175, 176, 177, 178, 179, 180, 181, 182, 183, 184, 185, 186, 187, 188, 189, 190, 191, 192, 193, 194, 195, 196, 197]
}

[sub_resource type="Animation" id="Animation_lski7"]
resource_name = "attack3"
length = 2.0
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.49, 1.56, 1.64, 1.72, 1.81, 1.91),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [200, 201, 202, 203, 204, 205, 206, 207, 208, 209, 210, 211, 212, 213, 214, 215, 216, 217, 218, 219, 225]
}

[sub_resource type="Animation" id="Animation_aseph"]
resource_name = "die"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.3, 1.5, 1.7, 1.9, 2.1, 2.4, 2.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [325, 326, 327, 328, 329, 330, 331, 332, 333, 334, 335, 336, 337, 338, 339, 340, 341, 342]
}

[sub_resource type="Animation" id="Animation_upk7o"]
resource_name = "hurt"
length = 0.55
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [300, 301, 302, 303, 304, 305]
}

[sub_resource type="Animation" id="Animation_7yuhm"]
resource_name = "idle"
length = 0.54
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.28, 0.36, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_brlbq"]
resource_name = "meditar"
length = 0.35
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06, 0.13, 0.19, 0.27),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [230, 231, 232, 233, 234]
}

[sub_resource type="Animation" id="Animation_60nsl"]
resource_name = "run"
length = 0.74
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.68),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [25, 26, 27, 28, 29, 30, 31, 32]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cc08f"]
_data = {
"RESET": SubResource("Animation_ibblx"),
"attack1": SubResource("Animation_3w1tt"),
"attack2": SubResource("Animation_60em7"),
"attack3": SubResource("Animation_lski7"),
"die": SubResource("Animation_aseph"),
"hurt": SubResource("Animation_upk7o"),
"idle": SubResource("Animation_7yuhm"),
"meditar": SubResource("Animation_brlbq"),
"run": SubResource("Animation_60nsl")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4ab02"]
animation = &"attack1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nyw4r"]
animation = &"attack2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_eayk6"]
animation = &"attack3"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_m27a1"]
animation = &"die"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ui7ry"]
animation = &"hurt"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_np7sy"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_38n3h"]
animation = &"meditar"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_csj1x"]
animation = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kuxu0"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wi5yt"]
advance_mode = 2
advance_condition = &"corriendo"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u1tib"]
advance_mode = 2
advance_condition = &"isIdle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0i3uf"]
advance_mode = 2
advance_condition = &"meditando"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_f61lf"]
advance_mode = 2
advance_condition = &"isIdle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xs8sd"]
advance_mode = 2
advance_condition = &"isAttacking1"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3bnli"]
switch_mode = 2
advance_mode = 2
advance_condition = &"isIdle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gxgk2"]
advance_mode = 2
advance_condition = &"isAttacking3"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qplu8"]
switch_mode = 2
advance_mode = 2
advance_condition = &"isIdle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pe2dl"]
advance_mode = 2
advance_condition = &"isAttacking2"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yp6wg"]
switch_mode = 2
advance_mode = 2
advance_condition = &"isIdle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_r06bc"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sqvbe"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_u1hm8"]
states/Start/position = Vector2(149.333, 36)
states/attack1/node = SubResource("AnimationNodeAnimation_4ab02")
states/attack1/position = Vector2(549.778, 407.334)
states/attack2/node = SubResource("AnimationNodeAnimation_nyw4r")
states/attack2/position = Vector2(362.667, 50)
states/attack3/node = SubResource("AnimationNodeAnimation_eayk6")
states/attack3/position = Vector2(856, 303.333)
states/die/node = SubResource("AnimationNodeAnimation_m27a1")
states/die/position = Vector2(812, 103.333)
states/hurt/node = SubResource("AnimationNodeAnimation_ui7ry")
states/hurt/position = Vector2(225.333, 204.667)
states/idle/node = SubResource("AnimationNodeAnimation_np7sy")
states/idle/position = Vector2(538.667, 222)
states/meditar/node = SubResource("AnimationNodeAnimation_38n3h")
states/meditar/position = Vector2(736, 367.333)
states/run/node = SubResource("AnimationNodeAnimation_csj1x")
states/run/position = Vector2(361.778, 383.63)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_kuxu0"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_wi5yt"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_u1tib"), "idle", "meditar", SubResource("AnimationNodeStateMachineTransition_0i3uf"), "meditar", "idle", SubResource("AnimationNodeStateMachineTransition_f61lf"), "idle", "attack1", SubResource("AnimationNodeStateMachineTransition_xs8sd"), "attack1", "idle", SubResource("AnimationNodeStateMachineTransition_3bnli"), "idle", "attack3", SubResource("AnimationNodeStateMachineTransition_gxgk2"), "attack3", "idle", SubResource("AnimationNodeStateMachineTransition_qplu8"), "idle", "attack2", SubResource("AnimationNodeStateMachineTransition_pe2dl"), "attack2", "idle", SubResource("AnimationNodeStateMachineTransition_yp6wg"), "hurt", "idle", SubResource("AnimationNodeStateMachineTransition_r06bc"), "hurt", "run", SubResource("AnimationNodeStateMachineTransition_sqvbe")]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_bwdxx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6r33p"]
radius = 20.5
height = 66.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vdb1n"]
radius = 2242.57

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y0w7e"]
radius = 26.5
height = 89.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_glur3"]
radius = 25.0
height = 190.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_20tcd"]
radius = 69.0
height = 138.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bu41l"]
radius = 37.0
height = 94.0

[node name="CATALAN" type="CharacterBody2D"]
collision_layer = 11
collision_mask = 11
script = ExtResource("1_alp6a")
damage = 20

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cc08f")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_u1hm8")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_bwdxx")
parameters/conditions/corriendo = false
parameters/conditions/isAttacking1 = false
parameters/conditions/isAttacking2 = false
parameters/conditions/isAttacking3 = false
parameters/conditions/isIdle = false
parameters/conditions/meditando = false

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(5, -56)
scale = Vector2(2, 2)
texture = ExtResource("2_f2ay3")
flip_h = true
hframes = 25
vframes = 14
frame = 1

[node name="hitboxGlobal" type="CollisionShape2D" parent="."]
position = Vector2(3, 15)
shape = SubResource("CapsuleShape2D_6r33p")

[node name="deteccion" type="Area2D" parent="."]
visible = false
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="deteccion"]
position = Vector2(0, 8)
shape = SubResource("CircleShape2D_vdb1n")

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 12
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(4, 18)
shape = SubResource("CapsuleShape2D_y0w7e")

[node name="hitboxPatada" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitboxPatada"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_glur3")
disabled = true

[node name="hitboxPoder2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitboxPoder2"]
position = Vector2(80, 23)
shape = SubResource("CapsuleShape2D_20tcd")
disabled = true

[node name="hitboxPoder1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitboxPoder1"]
position = Vector2(-82, 28)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_bu41l")
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Sounds" type="Node" parent="."]

[node name="risa" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("3_lil3s")

[node name="hurt" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("4_cxdm5")

[node name="ataque1" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("5_lrqft")

[node name="ataque2" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("6_0le3h")

[node name="ataque3" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("7_swvsr")

[node name="muerte" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("8_xoj61")
volume_db = 2.0

[connection signal="body_entered" from="deteccion" to="." method="_on_deteccion_body_entered"]
[connection signal="body_exited" from="deteccion" to="." method="_on_deteccion_body_exited"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="hitboxPatada" to="." method="_on_hitbox_patada_body_entered"]
[connection signal="body_entered" from="hitboxPoder2" to="." method="_on_hitbox_poder_2_body_entered"]
[connection signal="body_entered" from="hitboxPoder1" to="." method="_on_hitbox_poder_1_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
